apps/teslamate/teslamate-grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate-grafana
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslamate-grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teslamate-grafana
    spec:
      containers:
        - name: teslamate-grafana
          image: teslamate/grafana:1.30.1
          ports:
            - containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      restartPolicy: Always
      automountServiceAccountToken: false
