apps/teslamate/teslamate-grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  namespace: teslamate
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: teslamate-grafana
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
