apps/teslamate/teslamate-grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    cloudflare-operator.io/type: CNAME
spec:
  ingressClassName: nginx
  rules:
    - host: teslamate-grafana.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslamate-grafana
                port:
                  number: 3000
